# zk-cohort

./: README.md
Fiat_shamir/src/: main.rs
polynomial/: Cargo.toml
polynomial/multilinear/src/: main.rs
polynomial/src/: libx.rs  main.rs  univariate.rs
shamir/: Cargo.toml  README.md
shamir/src/: main.rs  univariate.rs
the_sumcheck_protocol/: Cargo.toml
the_sumcheck_protocol/src/: sumcheck.rs
