[package]
name = "the_sumcheck_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
ark-bn254 = "0.5.0"  # Use the latest version
ark-poly = "0.5.0"
ark-std = "0.5.0"
sha3 = "0.10"  # Ensure sha3 is included
fiat_shamir = { path = "../fiat_shamir" }
multilinear = { path = "../multilinear" }  # Ensure the correct local path

